# PowerDesktops

./: .gitignore  README.md  SDFDSf.md  pyproject.toml
.github/workflows/: main.yaml
destkop_keys/: desktop_commands.py  desktop_exec.py  desktop_switching.py  disable_caps.py
destkop_keys/ui/: command_header.py  desktop_hud.py  desktop_status.py
power_desktop/: __main__.py  _except_hook.py  desktop_commands.py  layout_kw.py  main.py  model_1d.py  setup_logging.py  vda.py
power_desktop/desktop_model/: model_1d.py
power_desktop/model/: model_1d.py
power_desktop/tools/: exec_reinit_vda_managers.py  logs.py  undo_buffer.py  vda.py
power_desktop/ui/: colors.py  command_header.py  desktop_hud.py  desktop_status.py  root.py
power_desktop/ui/parts/: close_view.py  command_header.py  error_info.py  okay_action.py  start_view.py  win_title_view.py
power_desktop/util/: event_loop.py  str.py  windows.py
scripts/: build.py
