[tool.poetry]
name = "power_desktop"
version = "0.1.0"
description = "Windows desktop switching using WASD-based hotkeys."
authors = ["GregRos <gregros@gregros.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
spotipy = "^2.24.0"
colorama = "^0.4.6"
comtypes = "^1.4.7"
keyboard = "^0.13.5"
pycaw = "^20240210"
pywin32 = "^311"
pyvda = "^0.4.3"
pywinauto = "^0.6.8"
typeguard = "^4.3.0"
python-benedict = "^0.33.2"
react-tk = { path = "../react-tk", develop = true }
keyweave = { path = "../keyweave", develop = true }

[tool.poetry.scripts]
power-desktop = "power_desktop.main:start"

[tool.pyright]
typeCheckingMode = "strict"
exclude = ["**/site-packages/**"]
autoImportCompletions = true
autoIndent = true
diagnosticMode = "workspace"
ignore = ["**/Lib/*.py"]

extraPaths = ["../react-tk", "../keyweave"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
