[tool.poetry]
name = "power_desktop"
version = "0.1.1"
description = "Windows desktop switching using WASD-based hotkeys."
authors = ["GregRos <gregros@gregros.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
colorama = "^0.4.6"
keyboard = "^0.13.5"
pyvda = "^0.4.3"
pywinauto = "^0.6.8"
react-tk = "^0.4.2"
keyweave = "^0.16.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"
black = "^25.9.0"
pyright = "^1.1.406"

[tool.poetry.scripts]
power-desktop = "power_desktop.main:start"
exe = "scripts.build:pyi"

[tool.pyright]
typeCheckingMode = "strict"
exclude = ["**/site-packages/**"]
autoImportCompletions = true
autoIndent = true
diagnosticMode = "workspace"
ignore = ["**/Lib/*.py"]

extraPaths = ["../react-tk", "../keyweave"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
