[tool.poetry]
name = "power_desktop"
version = "0.1.1"
description = "Windows desktop switching using WASD-based hotkeys."
authors = ["GregRos <gregros@gregros.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
colorama = "^0.4.6"
keyboard = "^0.13.5"
pyvda = "^0.4.3"
pywinauto = "^0.6.8"
apscheduler = "^3.11.0"
react-tk = "^0.4.10"
keyweave = "^0.18.6"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"
black = "^25.9.0"
pyright = "^1.1.406"

[tool.poetry.scripts]
power-desktop = "power_desktop.main:start"
exe = "scripts.build:pyi"

[tool.pyright]
typeCheckingMode = "strict"

autoImportCompletions = true
autoIndent = true
diagnosticMode = "workspace"
reportUnusedImport = false
ignore = [
    "**/Lib/*.py",
    "**/site-packages/**",
    "**/.venv/**/*",
    "**/dist/**/*",
    "**/*.pyi",
]
exclude = ["**/site-packages/**", "**/.venv/**/*", "**/dist/**/*", "**/*.pyi"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
